// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnRotation snapshots should render ColumnRotation 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="angle"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper=""
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="angle"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="protractor"
                height="8"
                name="Protractor"
                width="8"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="angle"
              maxlength="6"
              type="text"
              value="0°"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Rotation
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--light ButtonGroup--fullWidth ButtonGroup--fullWidth--light"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Rotate 90° right
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Flip horizontal  ⇧H
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Flip vertical  ⇧V
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnRotation snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--light"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels SectionColumnLabels--light"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label SectionColumnLabels__label--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
        data-test-text=""
        style="text-align: inherit;"
      >
        Rotation
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--light SectionColumnContent--twoInputs SectionColumnContent--twoInputs--light"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField TextField--light"
          data-test-text-field="angle"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--fullWidth TextFieldWrapper--fullWidth--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
            data-test-text-field-wrapper=""
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--light"
              data-test-box=""
              data-test-scrubbable-input="angle"
            >
              <div
                class="css-1jnxvbp Icon Icon--light Icon--neutral2 Icon--neutral2--light"
                data-test-icon="protractor"
                height="8"
                name="Protractor"
                width="8"
              />
            </div>
            <input
              class="TextFieldWrapper__input TextFieldWrapper__input--light"
              data-test-text-field-input="angle"
              maxlength="6"
              type="text"
              value="Mixed"
            />
          </div>
        </div>
        <div
          class="Tooltip Tooltip--light"
        >
          <div
            class="Tooltip__content Tooltip__content--light"
          >
            Rotation
            <div
              class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="carrot-down"
              height="14"
              name="CarrotDown"
              width="10"
            />
          </div>
        </div>
        <div
          class="css-1jnxvbp ButtonGroup ButtonGroup--light ButtonGroup--fullWidth ButtonGroup--fullWidth--light"
          data-test-button-group="layout-position"
        >
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="toggle-rotate"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="toggle-rotate"
              height="12"
              name="ToggleRotate"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Rotate 90° right
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-horizontal"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-horizontal"
              height="12"
              name="FlipHorizontal"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Flip horizontal  ⇧H
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
          <div
            class="ButtonGroup__button ButtonGroup__button--light"
            data-test-button-group-input="flip-vertical"
          >
            <div
              class="css-1jnxvbp ButtonGroup__icon ButtonGroup__icon--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
              data-test-icon="flip-vertical"
              height="12"
              name="FlipVertical"
              width="12"
            />
          </div>
          <div
            class="Tooltip Tooltip--light"
          >
            <div
              class="Tooltip__content Tooltip__content--light"
            >
              Flip vertical  ⇧V
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--light Tooltip__carrot--topCenter Tooltip__carrot--topCenter--light Icon Icon--light Icon--neutral1 Icon--neutral1--light"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
